Add Core project

--- a/Demo.Web/Web.config
+++ b/Demo.Web/Web.config
@@ -13,7 +13,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Demo.Web-20140811072417.mdf;Initial Catalog=aspnet-Demo.Web-20140811072417;Integrated Security=True"
+         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Demo.mdf;Initial Catalog=Demo;Integrated Security=True;MultipleActiveResultSets=True;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
