--- a/Demo.Web/packages.config
+++ b/Demo.Web/packages.config
@@ -27,8 +27,11 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="RazorGenerator.MsBuild" version="2.2.6" targetFramework="net45" developmentDependency="true" />
+  <package id="RazorGenerator.Mvc" version="2.2.3" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="T4MVC" version="3.9.2" targetFramework="net45" />
   <package id="T4MVCExtensions" version="3.9.2" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
