--- a/Demo.Web/packages.config
+++ b/Demo.Web/packages.config
@@ -26,6 +26,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorGenerator.MsBuild" version="2.2.6" targetFramework="net45" developmentDependency="true" />
   <package id="RazorGenerator.Mvc" version="2.2.3" targetFramework="net45" />
