--- a/Demo.Core/Demo.Core.csproj
+++ b/Demo.Core/Demo.Core.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Film.cs" />
     <Compile Include="Migrations\201408111837520_InitialCreate.cs" />
     <Compile Include="Migrations\201408111837520_InitialCreate.Designer.cs">
       <DependentUpon>201408111837520_InitialCreate.cs</DependentUpon>
@@ -58,6 +59,7 @@
     <Compile Include="DemoContext.cs" />
     <Compile Include="DemoInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\FilmsRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
