Add migration for films

--- a/Demo.Core/Demo.Core.csproj
+++ b/Demo.Core/Demo.Core.csproj
@@ -49,6 +49,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201408112022250_AddFilm.cs" />
+    <Compile Include="Migrations\201408112022250_AddFilm.Designer.cs">
+      <DependentUpon>201408112022250_AddFilm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Film.cs" />
     <Compile Include="Migrations\201408111837520_InitialCreate.cs" />
     <Compile Include="Migrations\201408111837520_InitialCreate.Designer.cs">
@@ -70,6 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201408111837520_InitialCreate.resx">
       <DependentUpon>201408111837520_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408112022250_AddFilm.resx">
+      <DependentUpon>201408112022250_AddFilm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
